@@ -1,5 +1,12 @@
 2002-02-28  Darin Adler  <darin@bentspoon.com>
 
+	* src/file-manager/fm-directory-view.c: (add_numbered_menu_item):
+	Escape the path too, not just the menu item name, because the path
+	contains other menu item names.
+	(add_submenu): Same.
+
+2002-02-28  Darin Adler  <darin@bentspoon.com>
+
 	* libnautilus-private/nautilus-link-desktop-file.c:
 	(nautilus_link_desktop_file_get_link_icon_from_desktop):
 	Fix assert where it was calling gnome_vfs_get_uri_from_local_path
